-feature#0001525: add rebuild_poller_cache --host-id=[ID]
-feature#0001536: small patch to allow plugins to change the x-axis labels
-feature#0001550: Record the polling time for each host to optimize polling times
-feature#0001588: Add pango-markup options to simple html markup in graphed text (title, legend etc)
-feature: jQuery "TableDnd" for Graph Template Item
-feature: Support for new variables |host_ping_retries| and |host_max_oids|
-feature: add_device.php uses a host template like feature#0001122
-feature: Add Data Source Type "COMPUTE" to data templates to fully support all rrdtool-1.2.x data source types
-feature: api_plugin_db_table_create allows for multi-column indices and more than one key per table
-feature: When editing Graph Templates offer Save and Return to allow in place editing
-feature: Disable Graph and Data Source Editing by Default and Provide an Unlock Button to Allow Editing
-feature: support LINE<width> using decimal xx.xx line widths for RRDTool > 1.0.x
-feature: disable graph item fields that are not related to the chosen graph item type
-feature: add support for [:dashes] and [:dash-offset]
-feature: add support for TICK on rrdtool graphs
-feature: TIME_SHIFT_START and _END as specific data sources for CDEFs (e.g. graph colorization)
-feature: rrdtool SHIFT support available
-feature: cli/rrd_datasouce_add.php allows for adding new datasouces to existing rrd files; supports RRD file version 0001, 0003
-feature: Add error messages to upgrade script SQL failures
-feature: duplicate Data Query (duplicates all associated graph templates and suggested values)
-feature: upgrade procedure made repeatable
-feature: add more table upgrade procedures and API functions: table install, column and key upgrade
-feature: introduce |graph_start| and |graph_end| for use with COMMENT/GPRINT or the like
-feature: introduce |graph_start| and |graph_end| for use with CDEFs