@@ -42,6 +42,7 @@ Cacti CHANGELOG
 -feature#0001536: small patch to allow plugins to change the x-axis labels
 -feature#0001550: Record the polling time for each host to optimize polling times
 -feature#0001588: Add pango-markup options to simple html markup in graphed text (title, legend etc)
+-feature#0002254: Support for "VALUE/REGEXP:" for get input fields of a data query
 -feature: jQuery "TableDnd" for Graph Template Item
 -feature: Support for new variables |host_ping_retries| and |host_max_oids|
 -feature: add_device.php uses a host template like feature#0001122
